--- a/HWQLztUI/myInfo/views/MyInfo.storyboard
+++ b/HWQLztUI/myInfo/views/MyInfo.storyboard
@@ -1000,7 +1000,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="c8D-gh-uQV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="848.79999999999995" y="-432.23388305847078"/>
+            <point key="canvasLocation" x="897" y="-287"/>
         </scene>
     </scenes>
     <resources>
