--- a/HWQLztUI/project/views/Project.storyboard
+++ b/HWQLztUI/project/views/Project.storyboard
@@ -1,24 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <customFonts key="customFonts">
-        <array key="HelveticaNeue.ttc">
-            <string>HelveticaNeue</string>
-        </array>
-        <array key="PingFang.ttc">
-            <string>PingFangSC-Regular</string>
-            <string>PingFangSC-Semibold</string>
-        </array>
-    </customFonts>
     <scenes>
         <!--Project Table View Controller-->
         <scene sceneID="TSP-45-Suv">
@@ -57,7 +48,7 @@
                                             <rect key="frame" x="148.5" y="12.5" width="78.5" height="51.5"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="97t-oz-1Gc">
-                                                    <rect key="frame" x="18.5" y="0.0" width="41.5" height="28"/>
+                                                    <rect key="frame" x="18.5" y="0.0" width="42" height="28"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="11P-YG-edw">
                                                             <rect key="frame" x="0.0" y="0.0" width="29.5" height="28"/>
@@ -66,7 +57,7 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="%" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="giA-nN-8Of">
-                                                            <rect key="frame" x="29.5" y="0.0" width="12" height="28"/>
+                                                            <rect key="frame" x="29.5" y="0.0" width="12.5" height="28"/>
                                                             <fontDescription key="fontDescription" type="system" weight="light" pointSize="15"/>
                                                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <nil key="highlightedColor"/>
@@ -145,7 +136,7 @@
                                             </constraints>
                                         </view>
                                     </subviews>
-                                    <color key="backgroundColor" red="0.29592889547348022" green="0.43121156096458435" blue="0.93338549137115479" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                    <color key="backgroundColor" red="0.011764705882352941" green="0.23529411764705882" blue="0.88235294117647056" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                     <constraints>
                                         <constraint firstAttribute="trailing" secondItem="1XY-pM-sdU" secondAttribute="trailing" constant="10" id="0YH-gU-KiT"/>
                                         <constraint firstItem="xSe-V7-1VN" firstAttribute="leading" secondItem="Zlo-dj-Gq5" secondAttribute="leading" constant="10" id="A63-b1-NMy"/>
@@ -360,7 +351,7 @@
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AK3-CU-9Ha">
                                         <rect key="frame" x="20" y="5" width="335" height="30"/>
-                                        <color key="backgroundColor" red="0.12549019610000001" green="0.34509803919999998" blue="0.96470588239999999" alpha="1" colorSpace="calibratedRGB"/>
+                                        <color key="backgroundColor" red="0.11353569477796555" green="0.27940475940704346" blue="0.77259618043899536" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
                                         <state key="normal" title="立即购买">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -393,14 +384,16 @@
                         <viewLayoutGuide key="safeArea" id="7Jl-Xc-ZQf"/>
                     </view>
                     <connections>
+                        <outlet property="headerBgView" destination="Zlo-dj-Gq5" id="y09-9K-SU2"/>
                         <outlet property="investBottomConstraint" destination="wtj-IQ-V2K" id="nBm-sP-ZNU"/>
                         <outlet property="investButton" destination="AK3-CU-9Ha" id="AOU-fN-Ez4"/>
+                        <outlet property="processLineView" destination="cJ8-37-kD3" id="ubJ-6s-aNl"/>
                         <outlet property="tableView" destination="MBh-HE-JOB" id="aMM-mT-jp2"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BNk-jZ-2uK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="439" y="133"/>
+            <point key="canvasLocation" x="437.60000000000002" y="132.68365817091455"/>
         </scene>
         <!--Invest View Controller-->
         <scene sceneID="W3u-ow-7dQ">
@@ -417,7 +410,7 @@
                                         <rect key="frame" x="146" y="24" width="84" height="59"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1KK-cP-s8p">
-                                                <rect key="frame" x="18.5" y="0.0" width="47.5" height="34"/>
+                                                <rect key="frame" x="18" y="0.0" width="48" height="34"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K8k-WT-ncv">
                                                         <rect key="frame" x="0.0" y="0.0" width="35.5" height="34"/>
@@ -426,7 +419,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="%" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qz1-h1-eXK">
-                                                        <rect key="frame" x="35.5" y="0.0" width="12" height="34"/>
+                                                        <rect key="frame" x="35.5" y="0.0" width="12.5" height="34"/>
                                                         <fontDescription key="fontDescription" type="system" weight="light" pointSize="15"/>
                                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <nil key="highlightedColor"/>
@@ -442,19 +435,19 @@
                                         </subviews>
                                     </stackView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="q69-WM-Jz0">
-                                        <rect key="frame" x="0.0" y="100.5" width="375" height="33"/>
+                                        <rect key="frame" x="0.0" y="93.5" width="375" height="40"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="bDD-ys-y1E">
-                                                <rect key="frame" x="20" y="0.0" width="335" height="33"/>
+                                                <rect key="frame" x="20" y="0.0" width="335" height="40"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="理财期限：0天" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gtd-vr-7ka">
-                                                        <rect key="frame" x="0.0" y="0.0" width="167.5" height="33"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="167.5" height="40"/>
                                                         <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="14"/>
                                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0元起投" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PYH-wl-8uH">
-                                                        <rect key="frame" x="167.5" y="0.0" width="167.5" height="33"/>
+                                                        <rect key="frame" x="167.5" y="0.0" width="167.5" height="40"/>
                                                         <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="14"/>
                                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <nil key="highlightedColor"/>
@@ -471,10 +464,10 @@
                                         </constraints>
                                     </view>
                                 </subviews>
-                                <color key="backgroundColor" red="0.29592889547348022" green="0.43121156096458435" blue="0.93338549137115479" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <color key="backgroundColor" red="0.12549019607843137" green="0.34509803921568627" blue="0.96470588235294119" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
                                     <constraint firstAttribute="bottom" secondItem="q69-WM-Jz0" secondAttribute="bottom" id="0PM-aC-y9T"/>
-                                    <constraint firstItem="q69-WM-Jz0" firstAttribute="height" secondItem="ik3-5Q-zrd" secondAttribute="height" multiplier="0.25" id="Py7-qk-PRW"/>
+                                    <constraint firstItem="q69-WM-Jz0" firstAttribute="height" secondItem="ik3-5Q-zrd" secondAttribute="height" multiplier="0.3" id="Py7-qk-PRW"/>
                                     <constraint firstAttribute="trailing" secondItem="q69-WM-Jz0" secondAttribute="trailing" id="XUd-FK-3Ep"/>
                                     <constraint firstItem="fn8-ME-aSL" firstAttribute="centerY" secondItem="ik3-5Q-zrd" secondAttribute="centerY" multiplier="0.8" id="agI-uT-vMa"/>
                                     <constraint firstItem="q69-WM-Jz0" firstAttribute="leading" secondItem="ik3-5Q-zrd" secondAttribute="leading" id="heV-3O-COy"/>
@@ -709,7 +702,7 @@
                                             </imageView>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5fI-qT-qp8">
                                                 <rect key="frame" x="45" y="0.5" width="310" height="35"/>
-                                                <color key="backgroundColor" red="0.12549019610000001" green="0.34509803919999998" blue="0.96470588239999999" alpha="1" colorSpace="calibratedRGB"/>
+                                                <color key="backgroundColor" red="0.14459928870201111" green="0.34883981943130493" blue="0.96476441621780396" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="35" id="tJQ-IO-biD"/>
                                                 </constraints>
